--- a/src/app/business/pages/inscription/insctiption.component.scss
+++ b/src/app/business/pages/inscription/insctiption.component.scss
@@ -38,3 +38,8 @@ input[type=file] {
     display: block;
     color: #333;  
   }
+
+  .label-porcantaje {
+    padding-top: 12px; 
+    padding-left: 5px;
+  }
