--- a/src/app/business/pages/inscription/step1-component.html
+++ b/src/app/business/pages/inscription/step1-component.html
@@ -20,6 +20,7 @@
                         type="text"
                         id="inputtext"
                         formControlName="fileNumber"
+                        pKeyFilter="int"
                         pInputText />
                     <label for="inputtext">Número de expediente</label>
                 </span>
