--- a/src/app/business/auth/log-out/log-out.component.html
+++ b/src/app/business/auth/log-out/log-out.component.html
@@ -8,7 +8,7 @@
                       <i class="text-50 pi pi-fw pi-sign-out text-2xl"></i>
                   </div>
                   <h1 class="text-900 font-bold text-4xl lg:text-5xl mb-2">Sesión expirada</h1>
-                  <span class="text-600 mb-5">Su sesión expiró por inactividad, por favor vuelve a ingresar.</span>
+                  <span class="text-600 mb-5">Su sesión expiró, por favor vuelve a ingresar.</span>
                   <img src="assets/demo/images/access/asset-access.svg" alt="session expired" class="mb-5" width="80%">
                   <button pButton pRipple icon="pi pi-arrow-left" label="Iniciar sesión" class="p-button-text" [routerLink]="['/']"></button>
               </div>
