--- a/src/app/business/pages/inscription/step4-component.html
+++ b/src/app/business/pages/inscription/step4-component.html
@@ -4,9 +4,7 @@
     }
 </style>
 <div class="card">
-    <p>
-        Complete todos los campos para continuar.
-    </p>
+    <p>Complete todos los campos para continuar.</p>
     <p-toast key="tst"></p-toast>
     <form [formGroup]="presenter.formStep4">
         <div class="grid p-fluid mt-3">
@@ -17,18 +15,34 @@
                         inputId="textarea"
                         rows="4"
                         cols="30"
-                        pInputTextarea></textarea>
+                        pInputTextarea
+                    ></textarea>
                     <label for="textarea">Título del proyecto de tesis</label>
                 </span>
             </div>
         </div>
-        <div *ngIf="results.length > 0 || presenter.title.value" class="grid p-fluid mb-2">
+        <div
+            *ngIf="results.length > 0 || presenter.title.value"
+            class="grid p-fluid mb-4"
+        >
             <div class="col-12">
                 <div class="grid d-flex mx-2">
-                    <b class="mr-auto">Se encontraron {{results.length}} tesis con un porcentaje de similitud del {{minimumPercentage}}% o más con respecto al título proporcionado.</b>
-                    <i class="pi pi-cog cursor-pointer" style="font-size: 1.3rem" (click)="showConfigCompareTitle()"></i>
+                    <b class="mr-auto"
+                        >Se encontraron {{results.length}} tesis con un
+                        porcentaje de similitud del {{minimumPercentage}}% o más
+                        con respecto al título proporcionado.</b
+                    >
+                    <i
+                        class="pi pi-cog cursor-pointer"
+                        style="font-size: 1.3rem"
+                        (click)="showConfigCompareTitle()"
+                    ></i>
                 </div>
-                <p-table *ngIf="results.length > 0" [value]="results" [tableStyle]="{'width': '100%', 'margin-top': '14px'}">
+                <p-table
+                    *ngIf="results.length > 0"
+                    [value]="results"
+                    [tableStyle]="{'width': '100%', 'margin-top': '14px'}"
+                >
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Tesis</th>
@@ -39,23 +53,25 @@
                         <tr>
                             <td>{{data.title}}</td>
                             <!-- <td [style]="data.similarity > '80.00' ? '#ef4444' : ''">{{data.similarity}}%</td> -->
-                            <td><p-tag [value]="data.similarity + '%'" [severity]="getSeverity(data.similarity)" />
-                                </td>
+                            <td>
+                                <p-tag
+                                    [value]="data.similarity + '%'"
+                                    [severity]="getSeverity(data.similarity)"
+                                />
+                            </td>
                         </tr>
                     </ng-template>
-                    
                 </p-table>
             </div>
-            
         </div>
         <div class="grid p-fluid">
             <div class="field col-12 md:col-4">
                 <span class="p-float-label">
                     <p-calendar
                         inputId="approvalDate"
-                        formControlName="approveDate"></p-calendar>
-                    <label for="approvalDate">Fecha de
-                        aprobación UDI</label>
+                        formControlName="approveDate"
+                    ></p-calendar>
+                    <label for="approvalDate">Fecha de aprobación UDI</label>
                 </span>
             </div>
             <div class="field col-12 md:col-4">
@@ -65,7 +81,8 @@
                         type="text"
                         id="jobNumber"
                         pKeyFilter="int"
-                        pInputText />
+                        pInputText
+                    />
                     <label for="jobNumber">Número de oficio</label>
                 </span>
             </div>
@@ -76,7 +93,8 @@
                         type="text"
                         id="resolutionNumber"
                         pKeyFilter="int"
-                        pInputText />
+                        pInputText
+                    />
                     <label for="resolutionNumber">Número de resolución</label>
                 </span>
             </div>
@@ -89,109 +107,67 @@
                         inputId="textarea"
                         rows="4"
                         cols="30"
-                        pInputTextarea></textarea>
-                    <label for="textarea">Comentarios u observaciones de la
-                        inscripción</label>
+                        pInputTextarea
+                    ></textarea>
+                    <label for="textarea"
+                        >Comentarios u observaciones de la inscripción</label
+                    >
                 </span>
             </div>
         </div>
         <div class="grid p-fluid">
-            <div class="col-12">
-                <div style="display: flex">
-                    <input
-                        #fileInput
-                        type="file"
-                        name="archives[]"
-                        class="mt-2 custom-file-input mr-auto"
-                        multiple
-                        (change)="onFileChange($event)"
-                        accept=".jpg,.jpeg,.png,.pdf,.doc,.docx,.zip,.xls,.xlsx"
-                    />
-                    <p-button
-                        icon="pi pi-trash"
-                        [rounded]="true"
-                        [text]="true"
-                        severity="danger"
-                        [disabled]="filesSelected.length < 1"
-                        (click)="clearFile()"
-                    />
-                </div>
-
-                <div class="flex flex-column mt-2">
-                    <div
-                        class="border-2 border-dashed surface-border border-round surface-ground flex-auto flex justify-content-center align-items-center font-medium"
-                    >
-                        <span
-                            *ngIf="filesSelected.length < 1"
-                            class="p-3"
-                            >No se ha seleccionado ningún archivo</span
-                        >
-                        <div
-                            *ngIf="filesSelected.length > 0"
-                            class="p-3"
-                        >
-                            <div *ngFor="let file of filesSelected">
-                                <i
-                                    *ngIf="
-                                        file.type === 'docx' ||
-                                        file.type === 'doc'
-                                    "
-                                    class="pi pi-file-word"
-                                    style="font-size: 1.5rem"
-                                ></i>
-                                <i
-                                    *ngIf="file.type === 'pdf'"
-                                    class="pi pi-file-pdf"
-                                    style="font-size: 1.5rem"
-                                ></i>
-                                <i
-                                    *ngIf="
-                                        file.type === 'xls' ||
-                                        file.type === 'xlsx'
-                                    "
-                                    class="pi pi-file-excel"
-                                    style="font-size: 1.5rem"
-                                ></i>
-                                <i
-                                    *ngIf="
-                                        file.type === 'jpg' ||
-                                        file.type === 'jpeg' ||
-                                        file.type === 'png'
-                                    "
-                                    class="pi pi-image"
-                                    style="font-size: 1.5rem"
-                                ></i>
-                                <i
-                                    *ngIf="file.type === 'zip'"
-                                    class="pi pi-folder"
-                                    style="font-size: 1.5rem"
-                                ></i>
-                                <span class="pl-3">{{
-                                    file.name
-                                }}</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <app-upload-archives
+                class="w-full"
+                (onFileChangeEmitter)="onFileChange($event)"
+                (clearFilesEmitter)="clearFile()"
+            ></app-upload-archives>
         </div>
         <div class="flex gap-3 mt-1">
-            <p-button (click)="backStep()" label="Regresar" [outlined]="true"
-                icon="pi pi-angle-left" iconPos="left" />
-            <p-button (click)="finalize()" label="Finalizar" icon="pi pi-check"
-                iconPos="right" [disabled]="presenter.formStep4.invalid" />
+            <p-button
+                (click)="backStep()"
+                label="Regresar"
+                [outlined]="true"
+                icon="pi pi-angle-left"
+                iconPos="left"
+            />
+            <p-button
+                (click)="finalize()"
+                label="Finalizar"
+                icon="pi pi-check"
+                iconPos="right"
+                [disabled]="presenter.formStep4.invalid"
+            />
         </div>
     </form>
 </div>
 
-<p-dialog header="Configuración de similitud de título de tesis" [modal]="true" [(visible)]="configCompareTitle" [style]="{ width: '45rem' }"
-[closeOnEscape]="false" [draggable]="false" [closable]="false">
-    <span class="p-text-secondary block mb-5">Ingrese el porcentaje mínimo en el cual.</span>
-    <div class="flex justify-content-center gap-3 mb-3">
-        <p-knob [(ngModel)]="minimumPercentage" valueTemplate="{value}%" />
+<p-dialog
+    header="Configuración de similitud de título de tesis"
+    [modal]="true"
+    [(visible)]="configCompareTitle"
+    [style]="{ width: '45rem' }"
+    [closeOnEscape]="false"
+    [draggable]="false"
+    [closable]="false"
+>
+    <span class="p-text-secondary block mb-5"
+        >Ingrese el porcentaje mínimo en el cual.</span
+    >
+    <div class="justify-content-center gap-3 mb-3">
+        <div class="flex">
+            <input type="text" style="width: 50px;" pInputText [(ngModel)]="minimumPercentage" class="mb-3"/>
+            <label class="label-porcantaje">%</label>
+        </div>
+        <div class="w-full">
+            <p-slider [(ngModel)]="minimumPercentage" class="w-full" />
+        </div>
     </div>
     <div class="flex justify-content-end gap-2">
-        <p-button label="Cancelar" severity="secondary" (onClick)="cancelConfigCompareTitle()" />
+        <p-button
+            label="Cancelar"
+            severity="secondary"
+            (onClick)="cancelConfigCompareTitle()"
+        />
         <p-button label="Guardar" (onClick)="saveConfigCompareTitle()" />
     </div>
 </p-dialog>
